[gd_scene load_steps=6 format=2]

[ext_resource path="res://Music/SFX/menu_button_hover.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Pause Control.gd" type="Script" id=2]
[ext_resource path="res://Art/buContinue.png" type="Texture" id=3]
[ext_resource path="res://Art/buExitToMain.png" type="Texture" id=4]
[ext_resource path="res://Art/buExitGame.png" type="Texture" id=5]

[node name="Pause Control" type="Node"]
pause_mode = 2
script = ExtResource( 2 )
top_level_control_node = NodePath("PauseMenuLayer/CenterContainer")
main_menu_scene = "res://Scenes/MainMenu.tscn"

[node name="mouseover_soundeffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuLayer"]
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuLayer/CenterContainer"]
margin_left = 146.0
margin_top = 81.0
margin_right = 333.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuLayer/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 180.0
margin_bottom = 100.0
grow_horizontal = 2
alignment = 1

[node name="Continue_Btn" type="TextureButton" parent="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 107.0
margin_bottom = 28.0
grow_horizontal = 2
size_flags_horizontal = 2
texture_normal = ExtResource( 3 )

[node name="Main_Menu_Btn" type="TextureButton" parent="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 173.0
margin_bottom = 62.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Btn" type="TextureButton" parent="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 173.0
margin_bottom = 93.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer/Continue_Btn" to="." method="_on_Btn_mouse_entered"]
[connection signal="mouse_entered" from="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer/Main_Menu_Btn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer/Main_Menu_Btn" to="." method="_on_Main_Menu_Btn_pressed"]
[connection signal="mouse_entered" from="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer/Exit_Btn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="PauseMenuLayer/CenterContainer/PanelContainer/VBoxContainer/Exit_Btn" to="." method="_on_Exit_Btn_pressed"]
